# Page-Analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: README.md  linter.yml  pyci.yml
page_analyzer/: __init__.py  app.py  db_requests.py  parser.py  services.py  url_validation.py
page_analyzer/templates/: error_404.html  index.html  layout.html  url.html  urls.html
templates/: index.html
tests/: test_app.py  test_parser.py  test_url_validation.py
